@@ -17,6 +17,7 @@ my $lib_1 = $tzil->slurp_file('build/lib/DZT1.pm');
 my $lib_2 = $tzil->slurp_file('build/lib/DZT2.pm');
 my $lib_3 = $tzil->slurp_file('build/lib/DZT3.pm');
 my $lib_4 = $tzil->slurp_file('build/lib/DZT4.pm');
+my $lib_5 = $tzil->slurp_file('build/lib/DZT5.pm');
 my $tst_0 = $tzil->slurp_file('build/t/basic.t'  );
 
 # e short for expected files
@@ -66,6 +67,16 @@ our $VERSION = '0.1.0'; # VERSION
 1;
 END LIB4
 
+# trailing space: '# VERSION '
+my $elib_5 = <<'END LIB0';
+use strict;
+use warnings;
+package DZT5;
+our $VERSION = '0.1.0'; # VERSION 
+# ABSTRACT: my abstract
+1;
+END LIB0
+
 my $etst_0 = <<'END TST0';
 #!/usr/bin/perl
 # VERSION
@@ -77,6 +88,7 @@ is ( $lib_1, $elib_1, 'check DZT1.pm' );
 is ( $lib_2, $elib_2, 'check DZT2.pm' );
 is ( $lib_3, $elib_3, 'check DZT3.pm' );
 is ( $lib_4, $elib_4, 'check DZT4.pm' );
+is ( $lib_5, $elib_5, 'check DZT5.pm' );
 is ( $tst_0, $etst_0, 'check basic.t' );
 
 for my $file ( qw/DZT2 DZT3/ ) {
