@@ -2,6 +2,8 @@ Revision history for Dist-Zilla-Plugin-OurPkgVersion
 
 {{$NEXT}}
 
+        - Allow trailing spaces after '#VERSION' ( DAGOLDEN )
+
 0.2.0     2011-07-31
 	- Add debug logging of successfully adding versions ( Christian Walde )
 
